# wavejack

./: .gitignore  CLAUDE.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml
api/: package.json
api/src/: index.ts  playback.ts  rooms.test.ts  rooms.ts  routes.ts  transcode.ts  types.ts  ws.ts
app/: IDEAS.md  index.html  package.json  pnpm-lock.yaml  somefile.md  vite.config.ts  vitest.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio.rs  auth_cache.rs  cobalt.rs  cover_art.rs  database.rs  discover.rs  downloader.rs  error.rs  lib.rs  library.rs  main.rs  metadata.rs  remote.rs  spotify.rs  tags.rs  tidal.rs  tidal_download.rs  waveform.rs  ytdlp.rs
app/src/components/: AudioPlayer.tsx  DownloadItem.tsx  DownloadQueue.tsx  FeedDownloadDialog.tsx  FeedView.tsx  GuessGameView.tsx  GuessWaveform.tsx  HomeView.tsx  ImmersivePlayer.tsx  Layout.tsx  LibraryView.tsx  ManualEditModal.tsx  (+10 more)
docs/: agent-verifiability-audit.md  discovery.md  ingest.md  library-hygiene.md  media-pipeline-redesign.md  multi-device-and-rekordbox.md
notes/: multi-device-sync.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cobalt.rs  database.rs  downloader.rs  error.rs  lib.rs  main.rs  metadata.rs  ytdlp.rs
src/components/: DownloadItem.tsx  DownloadQueue.tsx  Layout.tsx  MetadataPicker.tsx  Settings.tsx  UrlInput.tsx
src/hooks/: useDownloadEvents.ts
src/lib/: commands.ts  types.ts
src/stores/: downloadStore.ts  playerStore.ts  settingsStore.ts
(+42 files in other folders)
