[package]
name = "media-downloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "media_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
which = "7"
futures-util = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
