[package]
name = "wavejack"
version = "0.1.0"
edition = "2021"

[lib]
name = "wavejack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
which = "7"
futures-util = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
id3 = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
urlencoding = "2"
base64 = "0.22"
rand = "0.9"
axum = "0.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
lofty = "0.22"
sha2 = "0.10"
webbrowser = "1"
url = "2"
